--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@
 	color: #fff;
 	opacity: none;
 	background-color: #cc181e;
-	padding-top: 1em;
-	padding-bottom: 1em;
+	padding-top: 0.75em;
+	padding-bottom: 0.75em;
+	border-top-left-radius: 0.5em;
+	border-top-right-radius: 0.5em;
+	margin-bottom: 0em;
 }
 
 .heading1 {
@@ -20,9 +23,128 @@
 .logo {
 	display: block;
 	margin: auto;
+	padding-top: 1em;
 }
 
 .top-buffer {
 	margin-top: 3em;
 }
 
+.subcontent {
+	border: 1px solid #cc181e;
+	padding: 1em;
+	margin-top: 0em;
+}
+
+dl.rerankInformation dt {
+	text-align: center;
+	font-size: 110%;
+}
+
+dl.rerankInformation dd {
+	margin-bottom: 1em;
+}
+
+div table.subcontentTable>thead>tr>th,
+div table.subcontentTable>tbody>tr>td,
+div table.subcontentTable>tbody>tr,
+div table.subcontentTable>tfoot>tr>td {
+	border: 1px solid #cc181e;
+}
+
+div table.subcontentTable>thead>tr>th {
+	border-bottom: 2px solid #cc181e;
+}
+
+div table.subcontentTable>tfoot {
+	font-weight: bold;
+	border-top: 2px solid #cc181e;
+}
+
+
+/* style for range inputs */
+input[type=range] {
+	-webkit-appearance: none;
+	width: 100%;
+	margin: 13.8px 0;
+}
+input[type=range]:focus {
+	outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	background: #0000ff;
+	border-radius: 1.3px;
+	border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	border: 1px solid #000000;
+	height: 20px;
+	width: 16px;
+	border-radius: 3px;
+	background: #ffffff;
+	cursor: pointer;
+	-webkit-appearance: none;
+	margin-top: -6px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+	background: #1a1aff;
+}
+input[type=range]::-moz-range-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	background: #0000ff;
+	border-radius: 1.3px;
+	border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	border: 1px solid #000000;
+	height: 20px;
+	width: 16px;
+	border-radius: 3px;
+	background: #ffffff;
+	cursor: pointer;
+}
+input[type=range]::-ms-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	background: transparent;
+	border-color: transparent;
+	color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+	background: #0000e6;
+	border: 0.2px solid #010101;
+	border-radius: 2.6px;
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+	background: #0000ff;
+	border: 0.2px solid #010101;
+	border-radius: 2.6px;
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	border: 1px solid #000000;
+	height: 20px;
+	width: 16px;
+	border-radius: 3px;
+	background: #ffffff;
+	cursor: pointer;
+	height: 8.4px;
+}
+input[type=range]:focus::-ms-fill-lower {
+	background: #0000ff;
+}
+input[type=range]:focus::-ms-fill-upper {
+	background: #1a1aff;
+}
